--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "sass": "^1.44.0",
     "scss": "^0.2.4",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
