--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-swipeable": "^6.2.0",
     "sass": "^1.44.0",
     "scss": "^0.2.4",
     "web-vitals": "^1.1.2"
